# Messenger

./: .gitignore  CMakeLists.txt
src/: server.cpp
src/chat/: History.cpp  History.h  Response.h  Vault.cpp  Vault.h
src/common/: Id.cpp  Id.h  Message.h  Request.h  Response.h  User.h  WrappedMessage.cpp  WrappedMessage.h
src/server/: RequestHandler.cpp  RequestHandler.h  RequestHandlerImpl.cpp  RequestHandlerImpl.h
src/server/chat/: History.cpp  History.h  Response.cpp  Response.h  Vault.cpp  Vault.h
